<resources>
    <string name="app_name">Detection Appliation</string>

    <!--    MAIN ACTIVITY SCREEN-->
    <string name="capture">capture</string>
    <string name="about">about</string>

    <!--    CAPTURE ACTIVITY SCREEN-->
    <string name="detect">detect</string>
    <string name="desease_name_title">Nama Penyakit :</string>
    <string name="desease_name">Lorem</string>
    <string name="accuration">Akurasi</string>
    <string name="accuration_num">10</string>
    <string name="percentage">%</string>

    <!--    ABOUT ACTIVITY SCREEN-->
    <string name="title">Tentang Aplikasi</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

<!--    DESEASES-->

</resources>