<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptureActivity"
    android:background="@color/broken_white_F1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_preview"
                android:layout_width="300dp"
                android:layout_height="400dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:background="@color/broken_white_E2"/>

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="@id/iv_preview"
                app:layout_constraintStart_toStartOf="@id/iv_preview"
                app:layout_constraintEnd_toEndOf="@id/iv_preview"
                app:layout_constraintBottom_toBottomOf="@id/iv_preview"
                android:src="@drawable/ic_image"/>

            <Button
                android:id="@+id/btn_detect"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_btn"
                app:layout_constraintTop_toBottomOf="@id/iv_preview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:text="@string/detect"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"/>

            <TextView
                android:id="@+id/txt_desease_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desease_name_title"
                android:textSize="20sp"
                android:layout_marginStart="20sp"
                android:textColor="@color/black_10"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/btn_detect"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_desease_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desease_name"
                android:textColor="@color/black_10"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toEndOf="@id/txt_desease_name_title"
                app:layout_constraintTop_toBottomOf="@id/btn_detect"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/txt_accuration_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accuration"
                android:textSize="20sp"
                android:layout_marginStart="20sp"
                android:textColor="@color/black_10"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/txt_desease_name_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_accuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accuration_num"
                android:textColor="@color/black_10"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toEndOf="@id/txt_accuration_title"
                app:layout_constraintTop_toBottomOf="@id/txt_desease_name"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/txt_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage"
                android:textColor="@color/black_10"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toEndOf="@id/txt_accuration"
                app:layout_constraintTop_toBottomOf="@id/txt_desease_name"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>